style(state): fix state cell alignment

--- a/src/app/components_ngrx/work-item-cell/work-item-cell.component.less
+++ b/src/app/components_ngrx/work-item-cell/work-item-cell.component.less
@@ -23,3 +23,10 @@
     margin: 0 !important;
   }
 }
+.f8-planner-cell__state {
+  display: flex;
+  &-text {
+    line-height: normal;
+    white-space: normal;
+  }
+}
